# transcriber-rust

./: .ai-factory.json  .gitignore  AGENTS.md  Cargo.toml  README.md  ai_prompt.md  skills-lock.json
.agent/rules/: aif-conventions.md
.agent/skills/aif-review/: SKILL.md
.agent/skills/aif-skill-generator/: SKILL.md
.agent/workflows/: aif-commit.md  aif-implement.md  aif-plan.md  aif.md
.agents/skills/egui-tray-application/: SKILL.md
.ai-factory/: ARCHITECTURE.md  DESCRIPTION.md  ROADMAP.md
.ai-factory/evolutions/: 2026-05-22-15.57.md
.ai-factory/plans/: feature-project-skeleton-config.md  feature-tray-event-loop.md
.cargo/: config.toml
.github/workflows/: build.yml
docs/: architecture.md  configuration.md  getting-started.md
src/: audio.rs  client.rs  config.rs  gui.rs  hotkey.rs  main.rs  orchestrator.rs  output.rs  tray.rs
